Fix spacing issue.

--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -1,5 +1,5 @@
 
 // Materialize Overrides
-section {
+.container {
     overflow: hidden;
 }
